--- a/public/ar.html
+++ b/public/ar.html
@@ -220,7 +220,7 @@
             } catch(e) {
                 console.log("AR belum start, langsung back aja");
             }
-            window.location.href = 'shop';
+            window.location.href = 'shop.html';
         }
 
         function startAR() {
