--- a/public/shop.html
+++ b/public/shop.html
@@ -404,7 +404,7 @@
 
         function goToAR() {
             if (!selectedProduct) return;
-            window.location.href = `ar?id=${selectedProduct.id}`;
+            window.location.href = `ar.html?id=${selectedProduct.id}`;
         }
 
         // Init
