--- a/public/shop.html
+++ b/public/shop.html
@@ -146,8 +146,8 @@
         let productsData = [];
         let selectedProduct = null;
 
-        // 🔥 LOGIC BARU: DAFTAR ID YANG SUPPORT AR
-        // Masukkan ID produk yang udah punya model 3D di sini
+        // 🔥  DAFTAR ID YANG SUPPORT AR
+        //  ID produk yang udah punya model 3D 
         const AR_SUPPORTED_IDS = [1, 2, 3, 4]; 
 
         async function fetchProducts() {
@@ -188,7 +188,7 @@
                 let imgUrl = p.image_url;
                 if (imgUrl && imgUrl.includes('cloudinary')) imgUrl = imgUrl.replace('/upload/', '/upload/w_400,h_400,c_fill,q_auto/');
                 
-                // 🔥 LOGIC BARU: Cek AR Support
+                //  Cek AR Support
                 const isAR = AR_SUPPORTED_IDS.includes(p.id);
                 const arBadge = isAR 
                     ? `<div class="absolute bottom-2 right-2 bg-white/90 backdrop-blur text-indigo-600 text-[10px] font-bold px-2 py-1 rounded-lg shadow-sm flex items-center gap-1"><i data-lucide="box" class="w-3 h-3"></i> AR</div>` 
@@ -266,7 +266,6 @@
             if (imgUrl && imgUrl.includes('cloudinary')) imgUrl = imgUrl.replace('/upload/', '/upload/w_800,q_auto/');
             document.getElementById('detail-img').src = imgUrl;
 
-            // 🔥 LOGIC BARU: Update tombol AR di detail screen juga
             const ctaContainer = document.getElementById('detail-cta-container');
             if (AR_SUPPORTED_IDS.includes(selectedProduct.id)) {
                 ctaContainer.innerHTML = `
@@ -279,7 +278,7 @@
                         <i data-lucide="box-select" class="w-5 h-5"></i> AR Tidak Tersedia
                     </button>`;
             }
-            lucide.createIcons(); // Re-init icon buat tombol baru
+            lucide.createIcons(); 
 
             document.getElementById('detail-screen').classList.remove('hidden');
         }
