--- a/public/ar.html
+++ b/public/ar.html
@@ -177,6 +177,8 @@
                 <a-asset-item id="model-ikan" src="./assets/stikkan.glb"></a-asset-item>
                 <a-asset-item id="model-bandrek" src="./assets/bandrek.glb"></a-asset-item>
                 <a-asset-item id="model-terasi" src="./assets/terasiC.glb"></a-asset-item>
+                <a-asset-item id="model-herbal" src="./assets/terasiC.glb"></a-asset-item>
+                <a-asset-item id="model-lomek" src="./assets/terasiC.glb"></a-asset-item>
             </a-assets>
 
             <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -200,6 +202,14 @@
             <!-- Target 3 -->
             <a-entity mindar-image-target="targetIndex: 3">
                 <a-entity id="ar-content-4" gltf-model="#model-terasi" rotation="0 0 0" position="0 0 0" scale="1.2 1.2 1.2" visible="false" class="clickable" gesture-handler></a-entity>
+            </a-entity>
+            <!-- Target 4 -->
+            <a-entity mindar-image-target="targetIndex: 4">
+                <a-entity id="ar-content-5" gltf-model="#model-herbal" rotation="0 0 0" position="0 0 0" scale="1.2 1.2 1.2" visible="false" class="clickable" gesture-handler></a-entity>
+            </a-entity>
+            <!-- Target 5 -->
+            <a-entity mindar-image-target="targetIndex: 5">
+                <a-entity id="ar-content-6" gltf-model="#model-lomek" rotation="0 0 0" position="0 0 0" scale="1.2 1.2 1.2" visible="false" class="clickable" gesture-handler></a-entity>
             </a-entity>
 
         </a-scene>
