--- a/public/shop.html
+++ b/public/shop.html
@@ -146,9 +146,7 @@
         let productsData = [];
         let selectedProduct = null;
 
-        // 🔥  DAFTAR ID YANG SUPPORT AR
-        //  ID produk yang udah punya model 3D 
-        const AR_SUPPORTED_IDS = [1, 2, 3, 4]; 
+        // 🔥 GAK ADA LAGI ARRAY ID MANUAL! SEMUA OTOMATIS DARI DB 🔥
 
         async function fetchProducts() {
             try {
@@ -188,11 +186,12 @@
                 let imgUrl = p.image_url;
                 if (imgUrl && imgUrl.includes('cloudinary')) imgUrl = imgUrl.replace('/upload/', '/upload/w_400,h_400,c_fill,q_auto/');
                 
-                //  Cek AR Support
-                const isAR = AR_SUPPORTED_IDS.includes(p.id);
+                // 🔥 LOGIC BARU: CEK DARI DATABASE (has_ar) 🔥
+                const isAR = p.has_ar === true || p.has_ar === 1;
+
                 const arBadge = isAR 
                     ? `<div class="absolute bottom-2 right-2 bg-white/90 backdrop-blur text-indigo-600 text-[10px] font-bold px-2 py-1 rounded-lg shadow-sm flex items-center gap-1"><i data-lucide="box" class="w-3 h-3"></i> AR</div>` 
-                    : '';
+                    : `<div class="absolute bottom-2 right-2 bg-gray-200/90 backdrop-blur text-gray-500 text-[10px] font-bold px-2 py-1 rounded-lg shadow-sm flex items-center gap-1"><i data-lucide="box-select" class="w-3 h-3"></i> No AR</div>`;
 
                 const card = `
                     <div onclick="openModal(${p.id})" class="group bg-white rounded-3xl p-3 shadow-sm border border-gray-100 active:scale-95 transition-all duration-300 hover:shadow-md cursor-pointer animate-fade-in">
@@ -220,17 +219,16 @@
             if (imgUrl && imgUrl.includes('cloudinary')) imgUrl = imgUrl.replace('/upload/', '/upload/w_200,h_200,c_fill,q_auto/');
             document.getElementById('modal-img').src = imgUrl;
 
-            // 🔥 LOGIC BARU: Tampilkan tombol AR cuma kalo support
+            // 🔥 LOGIC BARU: CEK DARI DATABASE (has_ar) 🔥
             const btnAR = document.getElementById('btn-ar-action');
             const msgAR = document.getElementById('ar-unavailable-msg');
+            const isAR = selectedProduct.has_ar === true || selectedProduct.has_ar === 1;
             
-            if (AR_SUPPORTED_IDS.includes(selectedProduct.id)) {
-                btnAR.classList.remove('hidden');
-                btnAR.classList.add('flex');
+            if (isAR) {
+                btnAR.classList.remove('hidden'); btnAR.classList.add('flex');
                 msgAR.classList.add('hidden');
             } else {
-                btnAR.classList.add('hidden');
-                btnAR.classList.remove('flex');
+                btnAR.classList.add('hidden'); btnAR.classList.remove('flex');
                 msgAR.classList.remove('hidden');
             }
 
@@ -266,8 +264,11 @@
             if (imgUrl && imgUrl.includes('cloudinary')) imgUrl = imgUrl.replace('/upload/', '/upload/w_800,q_auto/');
             document.getElementById('detail-img').src = imgUrl;
 
+            // 🔥 LOGIC BARU: CEK DARI DATABASE (has_ar) 🔥
             const ctaContainer = document.getElementById('detail-cta-container');
-            if (AR_SUPPORTED_IDS.includes(selectedProduct.id)) {
+            const isAR = selectedProduct.has_ar === true || selectedProduct.has_ar === 1;
+
+            if (isAR) {
                 ctaContainer.innerHTML = `
                     <button onclick="goToAR()" class="w-full bg-slate-900 text-white font-bold py-4 rounded-xl shadow-xl active:scale-[0.98] transition flex items-center justify-center gap-2">
                         <i data-lucide="box" class="w-5 h-5"></i> Lihat dalam AR
@@ -287,7 +288,8 @@
 
         function goToAR() {
             if (!selectedProduct) return;
-            window.location.href = `/ar.html?id=${selectedProduct.id}`;
+            // Clean URL (udah sesuai Vercel config)
+            window.location.href = `/ar?id=${selectedProduct.id}`;
         }
 
         fetchProducts();
