--- a/public/shop.html
+++ b/public/shop.html
@@ -289,7 +289,7 @@
         function goToAR() {
             if (!selectedProduct) return;
             // Clean URL (udah sesuai Vercel config)
-            window.location.href = `/ar?id=${selectedProduct.id}`;
+            window.location.href = `/ar.html?id=${selectedProduct.id}`;
         }
 
         fetchProducts();
